--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <body>
     <canvas id="hell" width="1500" height="700" class="hidden"> </canvas>
     <button id="start">START</button>
+    <embed
+      src="..//Hell-Project/sounds/game-of-thrones-theme-song-ringtone-30782.mp3"
+    />
 
     <script src="/scripts/movies.js"></script>
     <script src="/scripts/game.js"></script>
