--- a/index.html
+++ b/index.html
@@ -9,9 +9,32 @@
   </head>
   <header>
     <h1>GUESS THE MOVIE</h1>
+    <div>
+      Instructions for dummies:
+
+      <ul>
+        <li>
+          The game will display a veiled<br />
+          random movie tittle
+        </li>
+
+        <li>
+          Press on any letter on the <br />keyboard to register your guess
+        </li>
+        <li>
+          Correctly guessed letters will <br />
+          be revealed in their right place
+        </li>
+
+        <li>
+          GAME OVER at 5 incorrect<br />
+          guesses
+        </li>
+      </ul>
+    </div>
   </header>
   <body>
-    <canvas id="hell" width="1500" height="700" class="hidden"> </canvas>
+    <canvas id="hell" width="1200" height="600" class="hidden"> </canvas>
     <button id="start">START</button>
     <embed
       src="..//Hell-Project/sounds/game-of-thrones-theme-song-ringtone-30782.mp3"
